--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+/*  #00ff99 #00e187 #1c1c22  text-accent #FDD064 #61F7D1 #ffb400 #FDD064 #61F7D1 #00ff99 #64FFDA #00cea8 #17bb9d #22e7c3f0 #64FFDA*/
+
+:root {
+  /* --primary-color: #111; */
+  --primary-color: #050816;
+  --secondary-color: #f2f2f2;
+}
+.light-theme {
+  --primary-color: #f2f2f2;
+  --secondary-color: #050816;
+}
+
 .translate-z-0 {
   transform: translateZ(0px);
 }
@@ -16,6 +28,193 @@
 .swiper-button-next:after,
 .swiper-rtl .swiper-button-prev:after {
   color: #f13024;
+}
+
+.black-gradient {
+  background: #000000; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #434343,
+    #000000
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #434343,
+    #000000
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.violet-gradient {
+  background: #804dee;
+  background: linear-gradient(-90deg, #804dee 0%, rgba(60, 51, 80, 0) 100%);
+  background: -webkit-linear-gradient(
+    -90deg,
+    #804dee 0%,
+    rgba(60, 51, 80, 0) 100%
+  );
+}
+
+.green-pink-gradient {
+  background: "#00cea8";
+  background: linear-gradient(90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
+  background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
+}
+
+.orange-text-gradient {
+  background: #f12711; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to top,
+    #f12711,
+    #f5af19
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to top,
+    #f12711,
+    #f5af19
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.green-text-gradient {
+  background: #11998e; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to top,
+    #11998e,
+    #38ef7d
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to top,
+    #11998e,
+    #38ef7d
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.blue-text-gradient {
+  /* background: -webkit-linear-gradient(#eee, #333); */
+  background: #56ccf2; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to top,
+    #2f80ed,
+    #56ccf2
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to top,
+    #2f80ed,
+    #56ccf2
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.pink-text-gradient {
+  background: #ec008c; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to top,
+    #ec008c,
+    #fc6767
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to top,
+    #ec008c,
+    #fc6767
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.green-pink-gradient {
+  background: "#00cea8";
+  background: linear-gradient(90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
+  background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
+}
+
+.cursor {
+  width: 10px;
+  height: 10px;
+  background-color: #fff;
+  position: fixed;
+  border-radius: 50%;
+  pointer-events: none;
+  mix-blend-mode: difference;
+}
+.hover-animation:hover .cursor {
+  transform: scale(10);
+}
+
+/* button{ */
+.button {
+  position: relative;
+  width: 230px;
+  min-height: 45px;
+  height: 45px;
+  border: 1px solid #64ffda;
+  border-radius: 35px;
+  color: white;
+  font-size: 16px;
+}
+
+.button .icon {
+  position: absolute;
+  top: -0.5px;
+  right: 0px;
+  height: 45px;
+  width: 45px;
+  border-radius: 35px;
+  color: #fff;
+  font-size: 19px;
+  background-color: #64ffda;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.5s;
+}
+.button:hover .icon {
+  width: 100%;
+}
+
+/* service card 2 */
+
+.work {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  grid-template-rows: auto;
+}
+
+.work .workbox {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 8px;
+  border: 1px solid #333;
+  padding: 1rem;
+  margin: 1rem;
+  background: #f5f5f32a;
+}
+.work .workbox .desc {
+  width: 75%;
+  color: #555;
+}
+.work .workbox .desc h3 {
+  color: #f2f2f2;
+  margin-bottom: 3px;
+}
+.work .workbox .desc p {
+  margin: 0px;
+}
+@media (max-width: 768px) {
+  .work .workbox {
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 0;
+    margin: 10px 0;
+  }
+  .work {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(4, auto);
+  }
 }
 
 @layer base {
